# schedule-api-v2

./: .gitmodules  README.md  docker-compose.yaml  nginx.conf
bot/: .env  .gitignore  .swcrc  Dockerfile  package-lock.json  package.json
bot/src/: main.ts
bot/src/lib/: api.ts  reply.ts  url.ts  utils.ts
bot/src/model/: schedule.ts
server/rust/: Cargo.toml
server/rust/src/: db.rs  main.rs  utils.rs
