[package]
name = "schedule-api-v2-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.5"
serde = { version = "1.0", features = ["derive"] }